--- a/templates/manager_assistant_form_view.html
+++ b/templates/manager_assistant_form_view.html
@@ -179,7 +179,7 @@
                     <ul>
                         {% for file in phd_files %}
                             <li>
-                                <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">
+                                <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="download">
                                     {{ file.document_file }}</a>
                             </li>
                         {% endfor %}
@@ -249,7 +249,7 @@
                     <ul>
                         {% for file in research_files %}
                         <li>
-                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">
+                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="download">
                                 {{ file.document_file }}</a>
                         </li>
                         {% endfor %}
@@ -327,7 +327,7 @@
                 <ul>
                     {% for file in tutoring_files %}
                         <li>
-                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">
+                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="download">
                                 {{ file.document_file }}</a>
                         </li>
                     {% endfor %}
