OA-15 : bigger text

--- a/templates/assistant_form_part6.html
+++ b/templates/assistant_form_part6.html
@@ -100,9 +100,9 @@
                 {{ form.activities_report_remark }}
                 <span class="error">{{ form.activities_report_remark.errors }}</span>
             </div>
-            <p><strong>
+            <h3><strong>
                 {% trans 'I declare on my honour that all the information contained in this form has been verified and is correct' %}
-            </strong></p>
+            </strong></h3>
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-primary"
                         title="{% trans 'Save' %}" id="bt_pstform_part6_save">
