--- a/templates/manager_home.html
+++ b/templates/manager_home.html
@@ -77,15 +77,22 @@
             <div class="col-md-5">
                 <h4 class="media-heading"><a href="{% url 'export_declined_mandates_pdf' %}" id="lnk_export_declined_mandates" class="no_spinner">
                     {% trans 'Export of the declined assistants mandates' %}</a></h4>
-                <p>{% trans 'Exporting assistants who declined their renewal' %}</p>
+                <p>{% trans 'Exporting data for which mandate has been declined' %}</p>
             </div>
         </div>
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-11">
+            <div class="col-md-5">
                 <h4 class="media-heading"><a href="{% url 'export_mandates_to_sap' %}" id="lnk_export_mandates_to_sap" class="no_spinner">
                     {% trans 'Export mandates to sap' %}</a></h4>
                 <p>{% trans 'This export is used to add assistants form to SAP' %}</p>
+            </div>
+
+            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-md-5">
+                <h4 class="media-heading"><a href="{% url 'export_list_declined_mandates_pdf' %}" id="lnk_export_declined_mandates" class="no_spinner">
+                    {% trans 'Export list of declined mandate assistants ' %}</a></h4>
+                <p>{% trans 'Exporting assistants who declined their renewal' %}</p>
             </div>
         </div>
         <div class="row" style="padding-top: 10px;">
