--- a/templates/messages.html
+++ b/templates/messages.html
@@ -25,14 +25,11 @@
 * at the root of the source code of this program.  If not,
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
-{% block style %}
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.11/css/dataTables.bootstrap.min.css">
-{% endblock %}
 {% block breadcrumb %}
 <li><a href="{% url 'manager_home' %}" id="lnk_manager_home">{% trans 'Assistants' %}</a></li>
 <li class="active">{% trans 'Messages' %}</li>
 {% endblock %}
+
 {% block content %}
 <div class="page-header">
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
@@ -42,7 +39,10 @@
         <div class="list-group">
             <div class="list-group-item">
                 <h4 class="list-group-item-heading">{% trans 'Assistants' %}</h4>
-                <p class="list-group-item-text">{% trans 'Startup procedure' %}</p>
+                <p class="list-group-item-text">
+                    {% trans 'Startup procedure' %} <br>
+                    <small>{% trans 'The assistant in special renewal procedure will receive a different email' %}.</small>
+                </p>
                 <p style="margin-top: 10px;"><a href="{% url 'send_message_to_assistants' %}" class="btn btn-info"
                                                 role="button"
                                                 onclick="return confirm('{% trans 'Are you sure you want to send these emails? This action is irreversible.' %}')">
@@ -59,19 +59,19 @@
         </div>
         <div class="table-responsive">
             <table id="myTable" class="table table-hover table-condensed table-bordered" cellspacing="0" width="100%">
-            <thead>
-            <tr>
-            <th>{% trans 'Sender' %}</th>
-            <th>{% trans 'Type' %}</th>
-            <th>{% trans 'Date' %}</th>
-            </tr>
-            </thead>
+                <thead>
+                    <tr>
+                        <th>{% trans 'Date' %}</th>
+                        <th>{% trans 'Sender' %}</th>
+                        <th>{% trans 'Type' %}</th>
+                    </tr>
+                </thead>
             <tbody>
             {% for message in sent_messages %}
                 <tr>
+                    <td data-sort="{{ message.date.isoformat }}">{{ message.date }}</td>
                     <td>{{ message.sender.person }}</td>
                     <td>{{ message.get_type_display }}</td>
-                    <td>{{ message.date }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -81,8 +81,6 @@
 </div>
 {% endblock %}
 {% block script %}
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
  <script>
  $(document).ready(function() {
     $('#myTable').DataTable( {
