move view mandate detail file

--- a/templates/manager_reviews_view.html
+++ b/templates/manager_reviews_view.html
@@ -49,7 +49,7 @@
                     </button>
                 </form>
             </li>
-            <li><a href="{% url 'manager_assistant_form_view' mandate_id=mandate_id %}">{% trans 'Assistant file' %}</a></li>
+            <li><a href="{% url 'view_mandate' mandate_id=mandate_id %}">{% trans 'Assistant file' %}</a></li>
             <li class="active"><a href="#">{% trans 'Workflow and reviews' %}</a></li>
         </ul>
     </div>
